--- a/index.html
+++ b/index.html
@@ -1,1 +1,29 @@
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" type="text/css" href="css/style.css"/>
+</head>
+<body>
+<h1>Our Menu</h1>
 
+
+<div class="row">
+  <div class="column chicken">
+  	<p class="title1">Chicken</p>
+  	<p class= "body">Donec rutrum vel orci ac fringilla. Praesent nisl mauris, mollis vel laoreet et, tristique vel est. Nullam facilisis ligula eget arcu lobortis, in suscipit lacus aliquet. Aenean vel ullamcorper nibh. Vestibulum fermentum ullamcorper justo, eu convallis odio varius eu. Fusce a commodo ante. Donec vel consectetur risus. Phasellus feugiat molestie libero nec efficitur. Curabitur eget justo dolor.</p>
+  </div>
+  <div class="column chicken">
+  	<p class="title2">Beef</p>
+  	<p class="body">Donec rutrum vel orci ac fringilla. Praesent nisl mauris, mollis vel laoreet et, tristique vel est. Nullam facilisis ligula eget arcu lobortis, in suscipit lacus aliquet. Aenean vel ullamcorper nibh. Vestibulum fermentum ullamcorper justo, eu convallis odio varius eu. Fusce a commodo ante. Donec vel consectetur risus. Phasellus feugiat molestie libero nec efficitur. Curabitur eget justo dolor.</p>
+  </div>
+  <div class="column sushi">
+  	<p class="title3">Sushi</p>
+  	<p class="body">Donec rutrum vel orci ac fringilla. Praesent nisl mauris, mollis vel laoreet et, tristique vel est. Nullam facilisis ligula eget arcu lobortis, in suscipit lacus aliquet. Aenean vel ullamcorper nibh. Vestibulum fermentum ullamcorper justo, eu convallis odio varius eu. Fusce a commodo ante. Donec vel consectetur risus. Phasellus feugiat molestie libero nec efficitur. Curabitur eget justo dolor.</p>
+  </div>
+
+</div>
+
+</body>
+</html>
